# web_semantic_article

./: .env.example  README.md  app.py  env_example.txt  main.py  pyproject.toml  requirements.txt
data/: ontology_context.txt
data/faiss_index/: index.faiss  index.pkl
src/: __init__.py  agent.py  llm_wrapper.py  main.py  rag_tools.py  sparql_tools.py  statistical_tools.py
