[project]
name = "projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "google-genai>=2.7.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-huggingface>=1.2.2",
    "markdown>=3.10.2",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "sparqlwrapper>=2.0.0",
    "streamlit>=1.58.0",
    "torchvision>=0.27.1",
]

[tool.pyright]
extraPaths = ["."]
